--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </div>
             <div id="partner">
                 <h1 class="title">Our Partner Clinic</h1>
-                <a href="https://victalife.com/" target="_blank"><img class="grayscale" src="./assets/images/partner.png" /></a>
+                <a href="https://victalife.com/" target="_blank"><img class="grayscale"
+                        src="./assets/images/partner.png" /></a>
             </div>
             <div id="contact">
                 <h1 class="title">Contact Us</h1>
@@ -90,5 +91,9 @@
                 </div>
             </div>
         </div>
+        <div id="footer">
+            BlockMMP © 2020 All Rights Reserved
+        </div>
     </div>
+
 </body>
